# advent-of-code-rust

./: Cargo.toml  README.md
src/: cli_args.rs  lib.rs  main.rs
src/util/: matrix.rs  mod.rs  position.rs  size.rs
src/year_2015/: mod.rs
src/year_2016/: mod.rs
src/year_2017/: mod.rs
src/year_2018/: mod.rs
src/year_2019/: mod.rs
src/year_2020/: mod.rs
src/year_2021/: mod.rs
src/year_2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  mod.rs
src/year_2023/: day01.rs  mod.rs
src/year_2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  mod.rs
src/year_2024/day07/: checked_op.rs  equation.rs  error.rs  mod.rs  operation_selection.rs
src/year_2024/day08/: antenna.rs  antinode.rs  error.rs  map.rs  mod.rs  position.rs  position_diff.rs  signed_diff.rs  size.rs
src/year_2024/day09/: disk_map.rs  error.rs  file.rs  mod.rs
src/year_2024/day10/: error.rs  map.rs  mod.rs
