[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
authors = ["TheBlackSheep3"]
readme = "README.md"

[lib]
name = "solutions"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
phf = { version = "0.11.1", features = ["macros"] }
regex = "1.7.1"
